# OzzylogicTestTask

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: find_assets.cmake
src/: DatabaseHolder.cpp  DatabaseHolder.h  DatabaseListItemDelegate.cpp  DatabaseListItemDelegate.h  DatabaseListModel.cpp  DatabaseListModel.h  DatabaseListModelItem.cpp  DatabaseListModelItem.h  DatabaseTreeView.cpp  DatabaseTreeView.h  Dialog.cpp  Dialog.h  Dialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
